Allow to embed authors in Book response
